--- a/API-GATEWAY.yml
+++ b/API-GATEWAY.yml
@@ -25,7 +25,14 @@ spring:
           uri: lb://PRODUCT-SERVICE
           predicates:
             - Path=/product/**
-         
+
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
        
 
 
