--- a/OrderService/pom.xml
+++ b/OrderService/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+        </dependency>
+
         <!-- Actuator (mandatory) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -124,6 +129,7 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
 
     </dependencies>
 
