--- a/ProductService/src/main/resources/application.yaml
+++ b/ProductService/src/main/resources/application.yaml
@@ -2,6 +2,12 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: PRODUCT-SERVICE
+
+  config:
+    import: configserver:http://localhost:9296
+
   datasource:
     url: jdbc:mysql://localhost:3306/productdb
     username: root
@@ -16,20 +22,18 @@ spring:
       hibernate:
         format_sql: true
 
-  application:
-    name: PRODUCT-SERVICE
-  config:
-    import: configserver:http://localhost:9296
 logging:
   pattern:
     level: "%5p [traceId=%X{traceId} spanId=%X{spanId}] %c : %m%n"
 
-
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#  client:
-#    fetch-registry: true
-#    register-with-eureka: true
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
+  health:
+    db:
+      enabled: false
